@@ -1,3 +1,9 @@
+*gitlab-shell-5.1.1 (08 Jul 2017)
+
+  08 Jul 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-shell-5.1.1.ebuild:
+  dev-vcs/gitlab-shell:  Add ebuild for gitlab-shell-5.1.1; dependency of
+  gitlab-ce-9.3.5
+
 *gitlab-shell-5.0.5 (17 Jun 2017)
 
   17 Jun 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-shell-5.0.5.ebuild:
